adds responsive form for user input to search to index.html

--- a/index.html
+++ b/index.html
@@ -20,7 +20,17 @@
 
 
   <main class="flex-row justify-space-between">
-
+    <div class="col-12 col-md-4">
+      <div class="card">
+        <h3 class="card-header text-uppercase">Search By User</h3>
+        <form class="card-body" id="user-form">
+          <label class="form-label" for="username">Username</label>
+          <input name="username" id="username" autofocus="true" type="text" class="form-input" />
+          <button type="submit" class="btn">Get User</button>
+        </form>
+      </div>
+    </div>
+    <div class="col-12 col-md-4"></div>
   </main>
 
   <script src='./assets/js/homepage.js'></script>
