--- a/index.html
+++ b/index.html
@@ -30,7 +30,10 @@
         </form>
       </div>
     </div>
-    <div class="col-12 col-md-4"></div>
+    <div class="col-12 col-md-4">
+      <h2 class="subtitle">Showing Repositories for: <span id="repo-search-term"></span></h2>
+      <div id="repos-container" class="list-group"></div>
+    </div>
   </main>
 
   <script src='./assets/js/homepage.js'></script>
