adds language buttons and search functionality via said buttons

--- a/index.html
+++ b/index.html
@@ -31,6 +31,14 @@
       </div>
     </div>
     <div class="col-12 col-md-4">
+      <h3 class="card-header text-uppercase">Search By Language</h3>
+      <div class="card-body" id="language-buttons">
+        <button data-language="javascript" class="btn">JavaScript</button>
+        <button data-language="flutter" class="btn">Flutter</button>
+        <button data-language="react-native" class="btn">React Native</button>
+      </div>
+    </div>
+    <div class="col-12 col-md-4">
       <h2 class="subtitle">Showing Repositories for: <span id="repo-search-term"></span></h2>
       <div id="repos-container" class="list-group"></div>
     </div>
